# test_bewise

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: db.py  main.py  models.py  schemes.py  service.py
app/migrations/: env.py
app/migrations/versions/: 6e37cf25a31e_init.py
