[tool.poetry]
name = "test_bewise"
version = "0.1.0"
description = ""
authors = ["artur <shadaraevd@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.79.0"}
sqlmodel = "^0.0.6"
alembic = "^1.8.1"
asyncpg = "^0.26.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
